--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "19.1.0",
     "react-fast-marquee": "^1.6.5",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
