--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.2",
+    "framer-motion": "^12.23.12",
     "hamburger-react": "^2.5.2",
     "next": "15.5.0",
     "react": "19.1.0",
